--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <h1>Hungry Eyes</h1>
+    <header class="title">
+        <h1 class="title-text">Hungry Eyes</h1>
     </header>
-    <section></section>
+    <section class="background-image" style="background-image: url('https://www.freepik.com/premium-photo/group-friends-eating-together_2695320.htm#query=food&position=41&from_view=search');"></section>
     <button>What to Eat?</button>
 
 
