--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hungry Eyes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="title">
         <h1 class="title-text">Hungry Eyes</h1>
     </header>
-    <section class="background-image" style="background-image: url('https://www.freepik.com/premium-photo/group-friends-eating-together_2695320.htm#query=food&position=41&from_view=search');"></section>
+    <div class="background-image" 
+    background-image: style="background-image: url('./assets/images/food-background.jpg');"
+    height: 400px;
+    width: 100%;
+    </div>
     <button>What to Eat?</button>
 
 
