--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <header class="title">
         <h1 class="title-text">Hungry Eyes</h1>
     </header>
-    <div class="background-image" 
-    background-image: style="background-image: url('./assets/images/food-background.jpg');"
-    height: 400px;
-    width: 100%;
+    <div class="background-image" style="border: none; height: 800px; background-image: url(./assets/images/food-background.jpg); background-size: cover;">
+    
     </div>
     <button>What to Eat?</button>
 
