--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="./assets/style/style.css"> </link>
 
 </head>
 <body>
     <header class="title">
         <h1 class="title-text">Hungry Eyes</h1>
     </header>
-    <div class="background-image" style="border: none; height: 800px; background-image: url(./assets/images/food-background.jpg); background-size: cover;">
-    
-    </div>
-    <button>What to Eat?</button>
+    <div class="background-image" style="border: none; height: 800px; background-image: url(./assets/images/food-background.jpg); background-size: cover;"></div>
+    <button>
+        What to Eat?
+    </button>
 
 
 
