--- a/index.html
+++ b/index.html
@@ -16,11 +16,42 @@
     <header class="title">
         <h1 class="title-text">Hungry Eyes</h1>
     </header>
-    <div class="background-image" style="border: none; height: 800px; background-image: url(./assets/images/food-background.jpg); background-size: cover;"></div>
+    <div class="background-image" style="border: none; height: 800px; background-image: url(./assets/images/food-background.jpg); background-size: cover; background-position: center center;"></div>
     <button>
         What to Eat?
     </button>
+    <br>
+    <br>
+    <br>
+    <button>
+        More Choices?
+    </button>
+   
 
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-4">
+<img src="https://cdn.pixabay.com/photo/2017/07/20/18/40/apricots-2523272_960_720.jpg"> 
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="https://cdn.pixabay.com/photo/2017/07/20/18/40/apricots-2523272_960_720.jpg"> 
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="https://cdn.pixabay.com/photo/2017/07/20/18/40/apricots-2523272_960_720.jpg"> 
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="https://cdn.pixabay.com/photo/2017/07/20/18/40/apricots-2523272_960_720.jpg"> 
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="https://cdn.pixabay.com/photo/2017/07/20/18/40/apricots-2523272_960_720.jpg"> 
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="https://cdn.pixabay.com/photo/2017/07/20/18/40/apricots-2523272_960_720.jpg"> 
+            </div>
+            
+        </div>
 
 
 
