buttons and near you section

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="background-image" 
         style="border: none; height: 800px; background-image: url(./assets/images/food-background.jpg); background-size: cover; background-position: center center;">
     </div>
-    <button>
+    <button class="what-to-eat">
         What to Eat?
     </button>
     <br>
     <br>
     <br>
-    <button>
+    <button class="choices">
         More Choices?
     </button>
    
@@ -57,7 +57,9 @@
     <div>
         place holder for map/list
     </div>
-<button>Still hungry? Click to see more pictures!</button>
+<button class="still">
+    Still hungry? Click to see more pictures!
+</button>
 
 
 
