--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <h2 class="near-you">Near You</h2>
-    <div>
+    <div class="map">
         place holder for map/list
     </div>
 <button class="still">
