map place holder and edit css

--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
     </div>
 
     <h2 class="near-you">Near You</h2>
-    <div>
+    <div class="col-12 col-md-4" id="results">
         place holder for map/list
     </div>
-<button class="still">
+    <br>
+    <br>
+    <button class="still">
     Still hungry? Click to see more pictures!
-</button>
+    </button>
 
 
 
