edit still hungry text

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
     <br>
     <br>
-    <button class="choices">
+    <button class="choices" id="still-hungry">
         More Choices?
     </button>
    
@@ -59,9 +59,12 @@
     </div>
     <br>
     <br>
-    <button class="still">
+    <div><a href="#still-hungry"style="text-decoration:none;color:#cc2b1f;font-size: 40px;">Still hungry? Click to see more pictures!</a></div>
+
+
+    <!-- <button class="still">
     Still hungry? Click to see more pictures!
-    </button>
+    </button> -->
 
 
 
