Add html comment, add event listener for still button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </div>
 
     <h2 class="near-you">Near You</h2>
-    <div>
+    <div id="top-five-results"> 
+        <!-- Armando and David: how are we displaying here? ex. a bunch of <p> tags or <ul><li> or buttons etc.? -->
         place holder for map/list
     </div>
 <button class="still">
