--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-4" id="0">
-                
+                <p>test</p>
             </div>
             <div class="col-12 col-md-4" id="1">
               
@@ -52,8 +52,9 @@
             </div>
         </div>
     </div>
-
-    <h2 class="near-you">Near You</h2>
+    <div class="near-you"
+        <h2>Near You</h2>
+   </div>
     <div class="map">
         place holder for map/list
     </div>
