map place holder border and near you css

--- a/index.html
+++ b/index.html
@@ -65,13 +65,10 @@
     </div>
     <br>
     <br>
-    <div><a href="#still-hungry"style="text-decoration:none;color:#cc2b1f;font-size: 40px;">Still hungry? Click to see more pictures!</a></div>
+    <div class="still"><a href="#still-hungry"style="text-decoration:none;color:#cc2b1f;font-size: 40px;">Still hungry? Click to see more pictures!</a></div>
 
 
-    <!-- <button class="still">
-    Still hungry? Click to see more pictures!
-    </button> -->
-
+   
 
 
 
