--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
 
     <h2 class="near-you">Near You</h2>
-    <div id="top-five-results"> 
-        <!-- Armando and David: how are we displaying here? ex. a bunch of <p> tags or <ul><li> or buttons etc.? -->
+    <div id="top-five-results"> ibuttons etc.? -->
 
         place holder for map/list
     </div>
