result list for js

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
 
     <h2 class="near-you">Near You</h2>
-    <div id="top-five-results"> ibuttons etc.? -->
-
+    <div class="result-list" id="top-five-results">
         place holder for map/list
     </div>
     <br>
