--- a/ka-tests/index.html
+++ b/ka-tests/index.html
@@ -20,13 +20,42 @@
     <header class="container pt-2 pb-3 text-center">
         <h1>Hungry Eyes</h1>
     </header>
+
     <!-- big image beneath the header -->
+
     <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
             src="../assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food"
             srcset="">
             <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button class="what-to-eat">What to Eat?</button></div>
     </main>
+
+    <!-- random food images landing zone -->
+<div id="choices-button-div container text-center"><button class="choices-button mt-md-4 mb-md-4" id="still-hungry">More Choices?</button></div>
     
+
+    <div class="container mb-4" id="random-img-container">
+        <div class="row">
+
+            <div class="col-12 col-md-4 mb-3 random-img-div">
+                <div id="0"></div>
+            </div>
+            <div class="col-12 col-md-4 mb-3 random-img-div">
+                <div id="1"></div>
+            </div>
+            <div class="col-12 col-md-4 mb-3 random-img-div">
+                <div id="2"></div>
+            </div>
+            <div class="col-12 col-md-4 mb-3 random-img-div">
+                <div id="3"></div>
+            </div>
+            <div class="col-12 col-md-4 mb-3 random-img-div">
+                <div id="4"></div>
+            </div>
+            <div class="col-12 col-md-4 mb-3 random-img-div">
+                <div id="5"></div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -43,6 +72,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+        <script src="./script.js"></script>
 </body>
 
 </html>
