add html for business details section

--- a/ka-tests/index.html
+++ b/ka-tests/index.html
@@ -59,13 +59,17 @@
 
     <!-- top five results -->
 
-    <section id="top-five-results-container" class="container row">
-        <div id="restaurant-list" class="col-sm-6">
-            
-        </div>
-
+    <section id="top-five-results-section" class="container row">
+        <div id="restaurant-list" class="col-sm-6"></div>
+        <div id="results-map-div" class="col-sm-6"></div>
     </section>
 
+    <!-- business details section -->
+
+    <section id="business-details-section" class="container row">
+        <div id="details-div" class="col-sm-6"></div>
+        <div id="details-map-div" class="col-sm-6"></div>
+    </section>
 
 
 
