--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 
     <h2 class="near-you">Near You</h2>
     <div class="result-list" id="top-five-results">
-        place holder for map/list
+        <ol>
+            <li class="resultOne">one</li>
+            <li class="resultTwo">two</li>
+            <li class="resultThree">three</li>
+            <li class="resultFour">four</li>
+            <li class="resultFive">five</li>
+          </ol>
     </div>
     <br>
     <br>
