added file link to background image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- big image beneath the header -->
 
     <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
-            src="../assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food"
+            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food"
             srcset="">
             <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button class="what-to-eat">What to Eat?</button></div>
     </main>
