add details section and some styles

--- a/index.html
+++ b/index.html
@@ -59,20 +59,19 @@
 
     <!-- top five results -->
 
-    <section id="top-five-results-section" class="container row">
+    <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2">
         <div id="restaurant-list" class="col-sm-6"></div>
         <div id="results-map-div" class="col-sm-6"></div>
     </section>
 
     <!-- business details section -->
 
-    <section id="business-details-section" class="container row">
+    <section id="business-details-section" class="container row mx-auto mt-5 mb-2">
         <div id="details-div" class="col-sm-6"></div>
         <div id="details-map-div" class="col-sm-6"></div>
     </section>
 
-
-
+    <!-- scripts -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
