--- a/index.html
+++ b/index.html
@@ -17,21 +17,49 @@
 </head>
 
 <body>
+
+
+
     <header class="container pt-2 pb-3 text-center">
         <h1>Hungry Eyes</h1>
     </header>
 
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Please give a search location</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="user-input-form">
+                        <div class="mb-3">
+                            <label for="recipient-name" class="col-form-label" placeholder="Los Angeles or 90020">City or zipcode</label>
+                            <input type="text" class="form-control" id="user-input-location">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Nevermind</button>
+                    <button type="button" class="btn btn-primary">Search</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- big image beneath the header -->
 
     <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
-            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food"
-            srcset="">
-            <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button class="what-to-eat">What to Eat?</button></div>
+            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food" srcset="">
+        <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button
+                class="what-to-eat">What to Eat?</button></div>
     </main>
 
     <!-- random food images landing zone -->
-<div id="choices-button-div" class="container text-center"><button class="choices-button mt-md-4 mb-md-4" id="still-hungry">More Choices?</button></div>
-    
+    <div id="choices-button-div" class="container text-center"><button class="choices-button mt-md-4 mb-md-4"
+            id="still-hungry">More Choices?</button></div>
+
 
     <div class="container mb-4" id="random-img-container">
         <div class="row">
@@ -83,7 +111,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-        <script src="./assets/script/script.js"></script>
+    <script src="./assets/script/script.js"></script>
 </body>
 
 </html>
