--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
 <body>
 
-
-
     <header class="container pt-2 pb-3 text-center">
         <h1>Hungry Eyes</h1>
     </header>
@@ -35,14 +33,15 @@
                 <div class="modal-body">
                     <form id="user-input-form">
                         <div class="mb-3">
-                            <label for="recipient-name" class="col-form-label" placeholder="Los Angeles or 90020">City or zipcode</label>
+                            <label for="recipient-name" class="col-form-label" placeholder="Los Angeles or 90020">City
+                                or zipcode</label>
                             <input type="text" class="form-control" id="user-input-location">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Nevermind</button>
-                    <button type="button" class="btn btn-primary">Search</button>
+                    <button id="search-button" type="button" class="btn btn-primary">Search</button>
                 </div>
             </div>
         </div>
@@ -52,9 +51,16 @@
 
     <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
             src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food" srcset="">
-        <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button
-                class="what-to-eat">What to Eat?</button></div>
+        <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle">
+            <a href="#random-img-container" class="what-to-eat button">What to Eat?</a>
+        </div>
     </main>
+
+    <div class="d-flex justify-content-center">
+    <div class="spinner-border finished-loading" style="width: 5rem; height: 5rem;" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>   
+      </div>
 
     <!-- random food images landing zone -->
     <div id="choices-button-div" class="container text-center"><button class="choices-button mt-md-4 mb-md-4"
@@ -88,8 +94,8 @@
     <!-- top five results -->
 
     <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2">
-        <div id="restaurant-list" class="col-sm-6"></div>
-        <div id="results-map-div" class="col-sm-6"></div>
+        <div id="restaurant-list" class="col-sm-8"></div>
+        <div id="results-map-div" class="col-sm-4"></div>
     </section>
 
     <!-- business details section -->
