add handleSearchError function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Hungry Eyes</h1>
     </header>
 
-    <!-- Modal -->
+    <!-- Get Location Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -46,6 +46,25 @@
             </div>
         </div>
     </div>
+
+    <!-- Search Error Modal -->
+  
+  <div class="modal fade" id="searchErrorModal" tabindex="-1" aria-labelledby="searchErrorModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="searchErrorModalLabel">Error</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p id="search-error-message-display"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <!-- big image beneath the header -->
 
