--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/style/style.css">
     </link>
+    
 </head>
 
 <body>
@@ -21,10 +22,8 @@
         <h1>Hungry Eyes</h1>
     </header>
 
-    <!-- big image beneath the header -->
-
     <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
-            src="../assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food"
+            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food"
             srcset="">
             <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button class="what-to-eat">What to Eat?</button></div>
     </main>
