add local storage searched term and count

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         </div>
     </main>
 
+<!-- loading spinner -->
+
     <div class="d-flex justify-content-center">
     <div class="spinner-border finished-loading" style="width: 5rem; height: 5rem;" role="status">
         <span class="visually-hidden">Loading...</span>
@@ -122,6 +124,11 @@
     <section id="business-details-section" class="container row mx-auto mt-5 mb-2">
         <div id="details-div" class="col-sm-8"></div>
         <div id="details-map-div" class="col-sm-4"></div>
+    </section>
+
+    <!-- user details area -->
+    <section id="user-details-section" class="container mxauto mt-5 row">
+        <div id="user-details-div" class="col-12"></div>
     </section>
 
     <!-- scripts -->
