add print search history to screen

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </section>
 
     <!-- user details area -->
-    <section id="user-details-section" class="container mxauto mt-5 row">
+    <section id="user-details-section" class="container mx-auto mt-5 row">
         <div id="user-details-div" class="col-12"></div>
     </section>
 
