--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/style/style.css">
     </link>
-    
+
 </head>
 
 <body>
@@ -23,14 +23,15 @@
     </header>
 
     <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
-            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food"
-            srcset="">
-            <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button class="what-to-eat">What to Eat?</button></div>
+            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food" srcset="">
+        <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle"><button
+                class="what-to-eat">What to Eat?</button></div>
     </main>
 
     <!-- random food images landing zone -->
-<div id="choices-button-div" class="container text-center"><button class="choices-button mt-md-4 mb-md-4" id="still-hungry">More Choices?</button></div>
-    
+    <div id="choices-button-div" class="container text-center"><button class="choices-button mt-md-4 mb-md-4"
+            id="still-hungry">More Choices?</button></div>
+
 
     <div class="container mb-4" id="random-img-container">
         <div class="row">
@@ -56,6 +57,18 @@
         </div>
     </div>
 
+    <div class="modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <form class="city-form" id="city-form">
+                    <label for="city-name">Enter City Name:</label>
+                    <input type="text" id="city-name" name="city-name">
+                </form>
+                <button id="show-modal">Enter City</button>
+            </div>
+        </div>
+    </div>
     <!-- top five results -->
 
     <section id="top-five-results-section" class="container row">
@@ -83,7 +96,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-        <script src="./assets/script/script.js"></script>
+    <script src="./assets/script/script.js"></script>
 </body>
 
 </html>
