style list of restaurants

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <!-- top five results -->
 
-    <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2">
+    <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2 near-you-title">
         <div id="restaurant-list" class="col-sm-8"></div>
         <div id="results-map-div" class="col-sm-4"></div>
     </section>
