--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- big image beneath the header -->
 
     <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
-            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delecious looking food" srcset="">
+            src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delicious looking food" srcset="">
         <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle">
             <a href="#random-img-container" class="what-to-eat button">What to Eat?</a>
         </div>
