--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/style/style.css">
     </link>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -116,7 +117,8 @@
 
     <!-- top five results -->
 
-    <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2 near-you-title">
+    <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2 near-you-title"></section>
+   
         <div id="restaurant-list" class="col-sm-8"></div>
         <div id="results-map-div" class="col-sm-4"></div>
     </section>
