--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- top five results -->
 
-    <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2 near-you-title"></section>
+    <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2 "></section>
    
         <div id="restaurant-list" class="col-sm-8"></div>
         <div id="results-map-div" class="col-sm-4"></div>
@@ -126,7 +126,7 @@
 
     <!-- business details section -->
 
-    <section id="business-details-section" class="container row mx-auto mt-5 mb-2">
+    <section id="business-details-section" class="container row mx-auto mt-5 mb-2 ">
         <div id="details-div" class="col-sm-8"></div>
         <div id="details-map-div" class="col-sm-4"></div>
     </section>
