--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <section id="top-five-results-section" class="container row mx-auto mt-5 gx-2 "></section>
    
-        <div id="restaurant-list" class="col-sm-8"></div>
+        <div id="restaurant-list" class="container col-sm-8"></div>
         <div id="results-map-div" class="col-sm-4"></div>
     </section>
 
